src/main/java/com/ke/search/antlr/GraphSQLParser.java
// Generated from /Users/zhaoxiang/Documents/code/IdeaProjects/graph-sql-parser/src/main/antlr/GraphSQL.g4 by ANTLR 4.8
package com.ke.search.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GraphSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, SELECT=17, 
		FROM=18, WHERE=19, NOT=20, AND=21, OR=22, IS=23, NULL=24, GROUP=25, HAVING=26, 
		ORDER=27, BY=28, ASC=29, DESC=30, LIMIT=31, AS=32, OPT=33, COUNT=34, ANYOFTERMS=35, 
		ALLOFTERMS=36, ALLOFTEXT=37, ANYOFTEXT=38, REGEXP=39, MATCH=40, SHORTEST=41, 
		PROPERTY=42, NDEGREE=43, DEPTH=44, NUMPATHS=45, FIRST=46, OFFSET=47, MAX=48, 
		MIN=49, SUM=50, AVG=51, NUMERIC_LITERAL=52, STRING_LITERAL=53, ID=54, 
		WS=55;
	public static final int
		RULE_query = 0, RULE_fromClause = 1, RULE_path = 2, RULE_node = 3, RULE_edge = 4, 
		RULE_whereClause = 5, RULE_expr = 6, RULE_groupBy = 7, RULE_selectClause = 8, 
		RULE_selectItem = 9, RULE_shortestPath = 10, RULE_ndegree = 11, RULE_havingClause = 12, 
		RULE_orderBy = 13, RULE_orderItem = 14, RULE_limitClause = 15, RULE_limitItem = 16, 
		RULE_aggregation = 17, RULE_commonItem = 18, RULE_countFunc = 19, RULE_countItem = 20, 
		RULE_shortestOptions = 21, RULE_limitArgs = 22, RULE_property = 23, RULE_depthArgs = 24, 
		RULE_numPaths = 25, RULE_first = 26, RULE_offset = 27, RULE_predicate = 28, 
		RULE_namedAttribute = 29, RULE_edgeName = 30, RULE_nodeName = 31, RULE_name = 32, 
		RULE_nodeLabel = 33, RULE_edgeType = 34, RULE_alias = 35, RULE_attribute = 36, 
		RULE_literal_value = 37, RULE_funcName = 38, RULE_keyword = 39, RULE_id = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"query", "fromClause", "path", "node", "edge", "whereClause", "expr", 
			"groupBy", "selectClause", "selectItem", "shortestPath", "ndegree", "havingClause", 
			"orderBy", "orderItem", "limitClause", "limitItem", "aggregation", "commonItem", 
			"countFunc", "countItem", "shortestOptions", "limitArgs", "property", 
			"depthArgs", "numPaths", "first", "offset", "predicate", "namedAttribute", 
			"edgeName", "nodeName", "name", "nodeLabel", "edgeType", "alias", "attribute", 
			"literal_value", "funcName", "keyword", "id"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "':'", "')'", "'-'", "'['", "']'", "'->'", "','", 
			"'='", "'<'", "'<='", "'>'", "'>='", "'.'", "'*'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'count'", "'anyofterms'", "'allofterms'", "'alloftext'", 
			"'anyoftext'", "'regexp'", "'match'", "'shortest'", "'property'", "'ndegree'", 
			"'depth'", "'numpaths'", "'first'", "'offset'", "'max'", "'min'", "'sum'", 
			"'avg'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "SELECT", "FROM", "WHERE", "NOT", "AND", 
			"OR", "IS", "NULL", "GROUP", "HAVING", "ORDER", "BY", "ASC", "DESC", 
			"LIMIT", "AS", "OPT", "COUNT", "ANYOFTERMS", "ALLOFTERMS", "ALLOFTEXT", 
			"ANYOFTEXT", "REGEXP", "MATCH", "SHORTEST", "PROPERTY", "NDEGREE", "DEPTH", 
			"NUMPATHS", "FIRST", "OFFSET", "MAX", "MIN", "SUM", "AVG", "NUMERIC_LITERAL", 
			"STRING_LITERAL", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GraphSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class QueryContext extends ParserRuleContext {
		public SelectClauseContext selectClause() {
			return getRuleContext(SelectClauseContext.class,0);
		}
		public FromClauseContext fromClause() {
			return getRuleContext(FromClauseContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public GroupByContext groupBy() {
			return getRuleContext(GroupByContext.class,0);
		}
		public HavingClauseContext havingClause() {
			return getRuleContext(HavingClauseContext.class,0);
		}
		public OrderByContext orderBy() {
			return getRuleContext(OrderByContext.class,0);
		}
		public LimitClauseContext limitClause() {
			return getRuleContext(LimitClauseContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener) ((GraphSQLListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor) return ((GraphSQLVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			selectClause();
			setState(83);
			fromClause();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(84);
				whereClause();
				}
			}

			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP) {
				{
				setState(87);
				groupBy();
				}
			}

			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HAVING) {
				{
				setState(90);
				havingClause();
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(93);
				orderBy();
				}
			}

			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(96);
				limitClause();
				}
			}

			setState(99);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromClauseContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(GraphSQLParser.FROM, 0); }
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public FromClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterFromClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitFromClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitFromClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FromClauseContext fromClause() throws RecognitionException {
		FromClauseContext _localctx = new FromClauseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_fromClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(FROM);
			setState(102);
			path();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathContext extends ParserRuleContext {
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public EdgeContext edge() {
			return getRuleContext(EdgeContext.class,0);
		}
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public PathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PathContext path() throws RecognitionException {
		PathContext _localctx = new PathContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_path);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			node();
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(105);
				edge();
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(106);
					path();
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public NodeNameContext nodeName() {
			return getRuleContext(NodeNameContext.class,0);
		}
		public NodeLabelContext nodeLabel() {
			return getRuleContext(NodeLabelContext.class,0);
		}
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_node);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__1);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SELECT) | (1L << FROM) | (1L << WHERE) | (1L << NOT) | (1L << AND) | (1L << OR) | (1L << IS) | (1L << NULL) | (1L << GROUP) | (1L << HAVING) | (1L << ORDER) | (1L << BY) | (1L << ASC) | (1L << DESC) | (1L << LIMIT) | (1L << AS) | (1L << OPT) | (1L << COUNT) | (1L << ANYOFTERMS) | (1L << ALLOFTERMS) | (1L << ALLOFTEXT) | (1L << ANYOFTEXT) | (1L << REGEXP) | (1L << MATCH) | (1L << SHORTEST) | (1L << PROPERTY) | (1L << NDEGREE) | (1L << DEPTH) | (1L << NUMPATHS) | (1L << FIRST) | (1L << OFFSET) | (1L << MAX) | (1L << MIN) | (1L << SUM) | (1L << AVG) | (1L << ID))) != 0)) {
				{
				setState(112);
				nodeName();
				}
			}

			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(115);
				match(T__2);
				setState(116);
				nodeLabel();
				}
			}

			setState(119);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeContext extends ParserRuleContext {
		public EdgeNameContext edgeName() {
			return getRuleContext(EdgeNameContext.class,0);
		}
		public EdgeTypeContext edgeType() {
			return getRuleContext(EdgeTypeContext.class,0);
		}
		public EdgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edge; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterEdge(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitEdge(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitEdge(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EdgeContext edge() throws RecognitionException {
		EdgeContext _localctx = new EdgeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_edge);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__4);
			setState(122);
			match(T__5);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SELECT) | (1L << FROM) | (1L << WHERE) | (1L << NOT) | (1L << AND) | (1L << OR) | (1L << IS) | (1L << NULL) | (1L << GROUP) | (1L << HAVING) | (1L << ORDER) | (1L << BY) | (1L << ASC) | (1L << DESC) | (1L << LIMIT) | (1L << AS) | (1L << OPT) | (1L << COUNT) | (1L << ANYOFTERMS) | (1L << ALLOFTERMS) | (1L << ALLOFTEXT) | (1L << ANYOFTEXT) | (1L << REGEXP) | (1L << MATCH) | (1L << SHORTEST) | (1L << PROPERTY) | (1L << NDEGREE) | (1L << DEPTH) | (1L << NUMPATHS) | (1L << FIRST) | (1L << OFFSET) | (1L << MAX) | (1L << MIN) | (1L << SUM) | (1L << AVG) | (1L << ID))) != 0)) {
				{
				setState(123);
				edgeName();
				}
			}

			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(126);
				match(T__2);
				setState(127);
				edgeType();
				}
			}

			setState(130);
			match(T__6);
			setState(131);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhereClauseContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(GraphSQLParser.WHERE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public WhereClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterWhereClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitWhereClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitWhereClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhereClauseContext whereClause() throws RecognitionException {
		WhereClauseContext _localctx = new WhereClauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_whereClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(WHERE);
			setState(134);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LogicalNotContext extends ExprContext {
		public TerminalNode NOT() { return getToken(GraphSQLParser.NOT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LogicalNotContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterLogicalNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitLogicalNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitLogicalNot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringFuncContext extends ExprContext {
		public FuncNameContext funcName() {
			return getRuleContext(FuncNameContext.class,0);
		}
		public NamedAttributeContext namedAttribute() {
			return getRuleContext(NamedAttributeContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(GraphSQLParser.STRING_LITERAL, 0); }
		public TerminalNode NUMERIC_LITERAL() { return getToken(GraphSQLParser.NUMERIC_LITERAL, 0); }
		public StringFuncContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterStringFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitStringFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitStringFunc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotNullContext extends ExprContext {
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode IS() { return getToken(GraphSQLParser.IS, 0); }
		public TerminalNode NOT() { return getToken(GraphSQLParser.NOT, 0); }
		public TerminalNode NULL() { return getToken(GraphSQLParser.NULL, 0); }
		public NotNullContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterNotNull(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitNotNull(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitNotNull(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalAndContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode AND() { return getToken(GraphSQLParser.AND, 0); }
		public LogicalAndContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterLogicalAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitLogicalAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitLogicalAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComparisionContext extends ExprContext {
		public Token op;
		public CommonItemContext commonItem() {
			return getRuleContext(CommonItemContext.class,0);
		}
		public Literal_valueContext literal_value() {
			return getRuleContext(Literal_valueContext.class,0);
		}
		public ComparisionContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterComparision(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitComparision(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitComparision(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalOrContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OR() { return getToken(GraphSQLParser.OR, 0); }
		public LogicalOrContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterLogicalOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitLogicalOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitLogicalOr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParenthesisContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParenthesisContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).enterParenthesis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphSQLListener ) ((GraphSQLListener)listener).exitParenthesis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphSQLVisitor ) return ((GraphSQLVisitor<? extends T>)visitor).visitParenthesis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				_localctx = new NotNullContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(137);
				predicate();
				setState(138);
				match(IS);
				setState(139);
				match(NOT);
				setState(140);
				match(NULL);
				}
				break;
			case 2:
				{
				_localctx = new StringFuncContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(142);
				funcName();
				setState(143);
				match(T__1);
				setState(144);
				namedAttribute();
				setState(145);
				match(T__8);
				setState(146);
				match(STRING_LITERAL);
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__8) {
					{
					setState(147);
					match(T__8);
					setState(148);
					match(NUMERIC_LITERAL);
					}
				}
